--- a/Core/WorkloadExt/WorkloadExt.rc
+++ b/Core/WorkloadExt/WorkloadExt.rc
@@ -146,7 +146,7 @@ LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_AUS
 
 IDD_PREFERENCES_DIALOG DIALOG DISCARDABLE  0, 0, 373, 223
 STYLE WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
-CAPTION "Workload Chart Preferences"
+CAPTION "Workload Preferences"
 FONT 8, "Tahoma"
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,262,202,50,14
