--- a/Core/ToDoList/ToDoList.vcxproj
+++ b/Core/ToDoList/ToDoList.vcxproj
@@ -304,7 +304,8 @@ copy unicode_release\ToDoList.exe ..\..\todolist_Plugins\release /y
     </ClCompile>
     <ClCompile Include="TDCAnonymizeTasklist.cpp" />
     <ClCompile Include="TDCCustomAttribData.cpp" />
-    <ClCompile Include="TDCCustomAttributeHelper.cpp">
+    <ClCompile Include="TDCCustomAttributeDef.cpp" />
+    <ClCompile Include="TDCCustomAttributeUIHelper.cpp">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
@@ -634,7 +635,8 @@ copy unicode_release\ToDoList.exe ..\..\todolist_Plugins\release /y
     <ClInclude Include="TaskSelectionDlg.h" />
     <ClInclude Include="TDCAnonymizeTasklist.h" />
     <ClInclude Include="tdccustomattribdata.h" />
-    <ClInclude Include="TDCCustomAttributeHelper.h" />
+    <ClInclude Include="TDCCustomAttributeDef.h" />
+    <ClInclude Include="TDCCustomAttributeUIHelper.h" />
     <ClInclude Include="TDCDialogHelper.h" />
     <ClInclude Include="tdcenum.h" />
     <ClInclude Include="TDCEnumContainers.h" />
