Implement framework for translating with Google

--- a/Core/TDLTransEdit/TDLTransEdit.rc
+++ b/Core/TDLTransEdit/TDLTransEdit.rc
@@ -211,6 +211,8 @@ BEGIN
     POPUP "&Tools"
     BEGIN
         MENUITEM "&Clean Up...",                ID_TOOLS_CLEANUP
+        MENUITEM SEPARATOR
+        MENUITEM "Google Translate",            ID_TOOLS_GOOGLETRANSLATE
     END
 END
 
