--- a/Core/BurndownExt/BurndownExt.rc
+++ b/Core/BurndownExt/BurndownExt.rc
@@ -138,9 +138,13 @@ BEGIN
                     WS_TABSTOP
     CONTROL         "",IDC_FRAME,"Static",SS_GRAYFRAME,0,28,314,253
     CONTROL         "",IDC_TB_PLACEHOLDER,"Static",SS_BLACKFRAME | NOT 
-                    WS_VISIBLE,87,12,122,17
+                    WS_VISIBLE,87,12,122,13
     CONTROL         "",IDC_GRAPH,"Button",BS_OWNERDRAW | WS_TABSTOP,8,38,298,
                     234
+    LTEXT           "Acti&ve Date Range",IDC_ACTIVEDATERANGE_LABEL,216,2,233,
+                    8
+    CONTROL         "",IDC_ACTIVEDATERANGE,"MFCRangeSlider",WS_TABSTOP,215,
+                    12,112,13
 END
 
 
@@ -190,6 +194,11 @@ BEGIN
     IDS_DISPLAY_REMAINING   "Days Remaining"
     IDS_TOOLTIP_INCOMPLETE  "%s\n%d Tasks"
     IDS_TOOLTIP_REMAINING   "%s\n%d Estimated\n%d Actual"
+END
+
+STRINGTABLE DISCARDABLE 
+BEGIN
+    IDS_ACTIVEDATERANGE     "Acti&ve Date Range (%s)"
 END
 
 #endif    // English (Australia) resources
