--- a/Core/BurndownExt/BurndownExt.vcxproj.filters
+++ b/Core/BurndownExt/BurndownExt.vcxproj.filters
@@ -78,5 +78,8 @@
     <ClInclude Include="BurndownGraphs.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="BurndownStatic.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
