Preliminary implementation of export to clipboard

--- a/Core/ToDoList/ToDoList.rc
+++ b/Core/ToDoList/ToDoList.rc
@@ -72,7 +72,7 @@ END
 // Dialog
 //
 
-IDD_EXPORT_DIALOG DIALOG DISCARDABLE  0, 0, 384, 252
+IDD_EXPORT_DIALOG DIALOG DISCARDABLE  0, 0, 384, 291
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Export Tasks"
 FONT 8, "Tahoma"
@@ -84,14 +84,18 @@ BEGIN
     COMBOBOX        IDC_FORMATOPTIONS,41,25,187,125,CBS_DROPDOWNLIST | 
                     CBS_OWNERDRAWFIXED | CBS_SORT | CBS_HASSTRINGS | 
                     WS_VSCROLL | WS_TABSTOP
-    LTEXT           "&Path",IDC_PATHLABEL,7,47,32,8
-    EDITTEXT        IDC_EXPORTPATH,41,45,187,13,ES_AUTOHSCROLL
+    CONTROL         "F&ile",IDC_TOPATH,"Button",BS_AUTORADIOBUTTON | 
+                    WS_GROUP,15,62,47,10
+    CONTROL         "&Windows Clipboard",IDC_TOCLIPBOARD,"Button",
+                    BS_AUTORADIOBUTTON | BS_TOP | BS_MULTILINE,15,81,219,10
+    EDITTEXT        IDC_EXPORTPATH,63,61,304,14,ES_AUTOHSCROLL | WS_GROUP
     CONTROL         "",IDC_FRAME,"Static",SS_BLACKFRAME | NOT WS_VISIBLE | 
-                    WS_DISABLED,7,66,370,157
-    DEFPUSHBUTTON   "&Export",IDOK,273,231,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,327,231,50,14
+                    WS_DISABLED,7,106,370,157
+    DEFPUSHBUTTON   "&Export",IDOK,273,270,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,327,270,50,14
     CONTROL         "Exp&ort to one file",IDC_EXPORTONEFILE,"Button",
                     BS_AUTOCHECKBOX | BS_TOP | WS_TABSTOP,239,8,138,21
+    GROUPBOX        "Export To",IDC_STATIC,7,47,370,52
 END
 
 IDD_PREFERENCES DIALOGEX 0, 0, 547, 295
@@ -4059,7 +4063,7 @@ BEGIN
     BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 377
-        BOTTOMMARGIN, 245
+        BOTTOMMARGIN, 284
     END
 
     IDD_PREFERENCES, DIALOG
